# libgiddy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: FindBoost.cmake  FindCUB.cmake  ReleaseOrDebug.cmake
examples/scripts/: run-all-examples
examples/src/modes_of_use/: common.cuh  direct_use_of_kernel.cu  factory_provided_type_erased_wrapper.cu  instantiation_of_wrapper.cu
src/cuda/: api  api_wrappers.h  bit_operations.cuh  bit_vector.cuh  faux_builtins.hpp  functors.hpp  kernel_wrapper.cuh  linear_grid.h  miscellany.h  miscellany.hpp  model_functors.hpp  optional_and_any.hpp  printing.cpp  printing.h  stl_array.cuh  syntax_replacement.h
src/cuda/on_device/: atomics.cuh  builtins.cuh  generic_shuffle.cuh  grid_info.cuh  imports.cuh  limits.cuh  math.cuh  miscellany.cuh  printing.cuh  ptx.cuh
src/cuda/on_device/primitives/: block.cuh  common.cuh  grid.cuh  warp.cuh
src/cuda/on_device/unused/: generic_ldg.cuh
src/cuda/unused/: lifted_functions.h
src/gsl/: gsl-lite.h
src/kernel_wrappers/: common.cuh  common.h  cub.cu  cub.h  generate.cu  registered_wrapper.cpp  registered_wrapper.h
src/kernel_wrappers/data_layout/: compressed_indices_scatter.cu  gather.cu  gather_bits.cu  scatter.cu  select_by_dense_subset.cu
src/kernel_wrappers/data_layout/set_representation/: dense_to_sparse.cu  sparse_to_dense.cu
src/kernel_wrappers/decompression/: delta.cu  dictionary.cu  discard_zero_bytes_fixed.cu  discard_zero_bytes_variable.cu  frame_of_reference.cu  incidence_bitmaps.cu  model.cu  run_length_encoding.cu  run_position_encoding.cu
src/kernel_wrappers/elementwise/: binary_operation.cu  simple_add.cu  ternary_operation.cu  unary_operation.cu
src/kernel_wrappers/enumerated_elementwise/: unary_operation.cu
src/kernel_wrappers/reduction/: count_if.cu  reduce.cu  scan.cu
src/kernel_wrappers/reduction/multi_reduce/: histogram.cu  sparse_to_dense.cu
src/kernels/: common.cuh  generate.cuh  launch_config_resolution_params.h  resolve_launch_configuration.cpp  resolve_launch_configuration.h
src/kernels/data_layout/: compressed_indices_scatter.cuh  gather.cuh  gather_bits.cuh  scatter.cuh  select_by_dense_subset.cuh
src/kernels/data_layout/set_representation/: common.h  dense_to_sparse.cuh  sparse_to_dense.cuh
src/kernels/decompression/: delta.cuh  dictionary.cuh  discard_zero_bytes_fixed.cuh  discard_zero_bytes_variable.cuh  frame_of_reference.cuh  incidence_bitmaps.cuh  model.cuh  model_functors.hpp  run_length_encoding.cuh  run_position_encoding.cuh
src/kernels/elementwise/: binary_operation.cuh  simple_add.cuh  ternary_operation.cuh  unary_operation.cuh
src/kernels/enumerated_elementwise/: unary_operation.cuh
src/kernels/reduction/: common.cuh  count_if.cuh  reduce.cuh  scan.cuh
src/kernels/reduction/multi_reduce/: common.cuh  dense_to_dense.cuh  histogram.cuh  sparse_to_dense.cuh
src/kernels/reduction/multi_reduce/fixed_num_reductions/: sparse_to_dense.cuh
src/util/: Factory.h  FactoryProducible.h  bits.hpp  builtins.hpp  cstring.hpp  endianness.h  exception.h  index_sequence.hpp  integer.h  macro.h  maps.hpp  math.hpp  miscellany.hpp  poor_mans_reflection.cpp  poor_mans_reflection.h  stack_trace.cpp  stack_trace.h  static_block.h  type_name.hpp
